[metadata]
name = EVApy
version = attr: EVApy.VERSION
author = Kilian Douarinou
url = 'https://github.com/LeGeRyChEeSe/EVApy/'
author_email = kilian.douarinou41@gmail.com
description = EVApy API Python
long_description = file: README.md, CHANGELOG, LICENSE
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable

    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules

    License :: OSI Approved :: MIT License

    Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
python_requires = >=3.9
install_requires =
    gql[aiohttp]

[options.package_data]
* = *.rst

[options.entry_points]
console_scripts =
    executable-name = EVApy.module:function

[options.packages.find]
where=src
exclude =
    *.python-version
    *__pycache__